# pceas

./: CMakeLists.txt  array.c  array.h  assemble.c  code.c  config.h  defs.h  dict.c  dict.h  externs.h  hash.c  hash.h  inst.h  list.c  list.h  macro.c  main.c  symbol.c
include/: hash.h  hashtable.h  lexer.h  parser.h  readline.h  sha256.h  str.h  stringutils.h  swap.h
src/: hash.c  hashtable.c  lexer.c  parser.c  readline.c  sha256.c  str.c  stringutils.c  swap.c
test/: CMakeLists.txt  hashtable.c  lexer.c  readline.c  sha256.c  str.c  stringutils.c
tests/: CMakeLists.txt  test_array.c  test_dict.c  test_list.c
